--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Seccion Comunidad -->
         <div class="seccion">
 	    	<div class="botonSeccion" data-seccion="#seccionComunidad"><div class="icono" style="background-image:url(images/botonSeccionIconoComunidad.png)"></div>Comunidad</div>
-            <div class="contenidoSeccion fondoPicoVerde" id="seccionComunidad">
+            <div class="contenidoSeccion fondoPicoVerde" id="seccionComunidad" data-posicion="">
             	<div class="container">
                 	<img src="http://www.comunidadresidentes.com.ar/appmontpellier/images/fotoComunidad.jpg" id="fotoComunidad">
                 </div>
@@ -88,7 +88,7 @@
         <!-- Seccion Facebook -->
 		<div class="seccion">
 			<div class="botonSeccion botonSeccion2" data-seccion="#seccionFacebook"><div class="icono" style=" background-image:url(images/botonSeccionIconoFacebook.png)"></div>Facebook</div>
-            <div class="contenidoSeccion fondoPicoCeleste" id="seccionFacebook">
+            <div class="contenidoSeccion fondoPicoCeleste" id="seccionFacebook" data-posicion="">
             	<div class="container">
                 	<!--<div class="fb-like-box" data-href="https://www.facebook.com/ComunidadResidentesArgentina" data-width="750" data-height="800"  data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false" ></div>-->
                 </div>
@@ -99,7 +99,7 @@
         <!-- Seccion Twitter -->
 		<div class="seccion">
 			<div class="botonSeccion" data-seccion="#seccionTwitter"><div class="icono" style="background-image:url(images/botonSeccionIconoTwitter.png)"></div>Twitter</div>
-            <div class="contenidoSeccion fondoPicoVerde" id="seccionTwitter">
+            <div class="contenidoSeccion fondoPicoVerde" id="seccionTwitter" data-posicion="">
             	<div class="container">
             	
                 </div>
@@ -110,7 +110,7 @@
         <!-- Seccion Proximos Eventos -->
         <div class="seccion">
 			<div class="botonSeccion botonSeccion2" data-seccion="#seccionProximosEventos"><div class="icono" style="background-image:url(images/botonSeccionIconoProximosEventos.png)"></div>Próximos Eventos</div>
-            <div class="contenidoSeccion fondoPicoCeleste" id="seccionProximosEventos">
+            <div class="contenidoSeccion fondoPicoCeleste" id="seccionProximosEventos" data-posicion="">
             	<div class="container" id="eventos">
  
                 </div>
@@ -120,8 +120,8 @@
         
         <!-- Seccion Invitar a la comunidad -->
 		<div class="seccion">
-	        <div class="botonSeccion" data-seccion="#seccionInvitar"><div class="icono" style="background-image:url(images/botonSeccionIconoInvitar.png)"></div>Invitar a la Comunidad</div>
-            <div class="contenidoSeccion fondoPicoVerde" id="seccionInvitar">
+	        <div class="botonSeccion" data-seccion="#seccionInvitar" ><div class="icono" style="background-image:url(images/botonSeccionIconoInvitar.png)"></div>Invitar a la Comunidad</div>
+            <div class="contenidoSeccion fondoPicoVerde" id="seccionInvitar" data-posicion="">
             	<div class="container">
                 	<span id="txtRes"> </span>
                     <div class="textoGenerico" >Completar los siguientes datos para invitar a un contacto a ser parte de nuestra comunidad. Recibirá una invitación vía email que deberá aceptar para confirmar su suscripción.</div>
