No connection handling

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="tag">DNI</div><input name="dni" type="text" class="campo">
                         <div class="tag">Email</div><input name="email" type="text" class="campo">
                         <input name="invita" id="invita" type="hidden"/>
-                        <a href="#" id="botonEnviarInvitacion" class="botonGenericoVerde">Enviar Invitacion <img src="images/iconoFlechaDer.png"></a>
+                        <a id="botonEnviarInvitacion" class="botonGenericoVerde">Enviar Invitacion <img src="images/iconoFlechaDer.png"></a>
 					</form>
                     </div>
                                    	
